--- a/src/app/pages/view-list/view-list.component.scss
+++ b/src/app/pages/view-list/view-list.component.scss
@@ -12,50 +12,6 @@
         padding: 0;
         margin: 0;
         width: 100%;
-        .input-container{
-            position: relative;
-            display: flex;
-            padding: 10px 10px;
-            align-items: center;
-            gap: 10px; 
-            border-radius: 15px;
-            background: linear-gradient(145deg, rgba(0, 0, 0, 0.9), rgba(20, 20, 20, 0.9));
-            box-shadow: 0px 8px 25px rgba(106, 93, 255, 0.3);
-            margin-top: 6px;
-            margin-bottom: 20px;
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-top: 2.5px solid #00d8ff;
-            button{
-                all: unset;
-                cursor: pointer;
-                margin-right: 10px;
-                font-size: 19px;
-                color:rgba(theme.$input, 0.9);
-                transition: color 0.3s ease; 
-            }&:focus-within {
-                button{
-                    color: theme.$neon-purple;
-                }
-            }&
-            button:hover{
-                color: theme.$neon-purple;
-            }
-            input {
-                flex: 1;
-                padding: 8px 0;
-                border: none;
-                outline: none;
-                font-size: 18px;
-                background: transparent;
-                border-bottom: 2px solid rgba(theme.$input, 0.3);
-                transition: border-color 0.3s ease;
-                color: theme.$white;
-                &:focus {
-                border-color: theme.$neon-purple;
-                }
-                
-            } 
-        }
 
         li {
             display: flex;
@@ -82,7 +38,7 @@
                 height: auto;
                 justify-content: space-between;
                 border-bottom: 2.5px solid #00d8ff;
-                margin-bottom: 5px;
+                margin-bottom: 35px;
                 padding-left: 10px;
                 padding-right: 10px;
                 h2 {
@@ -219,21 +175,67 @@
         }
     }
 }
-
+.page-header {
+    margin-top: 50px;
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  
+  .page-header h1 {
+    font-size: 2rem;
+    color: theme.$white;
+  }
+  
+  .page-header p {
+    font-size: 1.1rem;
+    color: #969696;
+  }
+.success-message {
+    padding: 10px;
+    margin: auto;
+    width: 84%;
+    background-color: #4CAF50;
+    color: white;
+    font-size: 16px;
+    border-radius: 5px;
+    text-align: center;
+    margin-top: 10px;
+    transition: opacity 0.3s ease;
+  }
+  
+  .success-message.hidden {
+    opacity: 0;
+  }
+  
 @media (max-width: 768px) {
+    .page-header {
+        width: 90%;
+        margin: auto;
+        margin-top: 30px;
+        text-align: center;
+      }
+      
+      .page-header h1 {
+        font-size: 27px;
+        margin-bottom: 15px;
+      }
+      
+      .page-header p {
+        font-size: 16px;
+      }
     .container-list {
         width: 98%;
         .name-list-container {
             width: 100%;
-
+            
             li {
                 padding: 15px;
                 .container-name{
-                    margin-bottom: -20px;
-                }
-
-                h2 {
-                    font-size: 18px;
+                    margin-bottom: 15px;
+                    
+                    h2 {
+                        font-size: 26px;
+                    }
                 }
 
                 button {
