--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
     <div class="nav-content">
         <div (click)="homePage()" class="logo-section">
         </div>
-        <div (click)="homePage()" class="title"><h2 class="h2"><span class="h2color1">Movie</span><span class="h2color2">Search</span></h2></div>
+        <div (click)="homePage()" class="title"><h2 class="h2"><span class="h2color1">Movie</span><span class="h2color2">Search</span><span class="h2color12"><span style="color:rgb(255, 217, 0) ;">.</span>A</span><span class="h2color22">I</span></h2></div>
         <div class="menu-icon" (click)="toggleMenu()">
             <div></div>
             <div></div>
