--- a/src/app/components/recomended-banner/recomended-banner.component.html
+++ b/src/app/components/recomended-banner/recomended-banner.component.html
@@ -1,6 +1,6 @@
 @if(config){
     <div class="banner-title">
-        <div [style.background-image]="'url('+config.img+')'" class="imagen-film">
+        <div title="Nuestras recomendaciones" [style.background-image]="'url('+config.img+')'" class="imagen-film">
             <div class="title-container">
                 <h1 class="title-film-selection" [innerHTML]="config.data">
                 </h1>
