--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -3,14 +3,14 @@
     <app-detail-banner [config]="BannerConfig"> </app-detail-banner> 
     @if(config){
         <div class="detail-section">
-            <div [style.background-image]="'url('+config.img+')'" class="image-section">
+            <div [title]="config.name"  [style.background-image]="'url('+config.img+')'" class="image-section">
                 <app-rate-chip [rate]="config.rate" [placeDecimals]="2" class="rate"></app-rate-chip>
-                <button class="button" title="Añadir a lista" type="button"><i class="bi bi-plus-square-fill" (click)="onAddClick()"></i></button>
+                <button alt="Añadir a listas" title="Añadir a listas" class="button" title="Añadir a lista" type="button"><i class="bi bi-plus-square-fill" (click)="onAddClick()"></i></button>
             </div>
             <div class="info-section">
                 @if(config.subtitle){
                     <div class="title">{{config.subtitle}}</div>
-                    <span> <div [style.background-image]="'url('+config.logo+')'" class="logo-productor" style="display: none;"></div></span>
+                    <span> <div title="Productora" [style.background-image]="'url('+config.logo+')'" class="logo-productor" style="display: none;"></div></span>
                 }
                 <div class="container-overview">
                     <div class="description-title">{{config.titleDescription}}</div>
@@ -25,7 +25,7 @@
                             <div class="box-description">{{item.description}}</div>
                         </div>
                     }<div class="box-cast" (click)="castClick()">
-                        <button class="cast">
+                        <button alt="ver reparto" title="Ver reparto" class="cast">
                             <div class="cast-title"><h3>VER REPARTO</h3></div>
                         </button>
                     </div>
