--- a/src/app/pages/discover/discover.component.html
+++ b/src/app/pages/discover/discover.component.html
@@ -7,13 +7,13 @@
                 <h2>{{ list.name }}</h2>
             </div>
             <div class="movies-cards-container">
-                <button *ngIf="list.movieCards.length > 1" class="scroll-button left" (click)="scrollLeft(cardWrapper)">‹</button>
+                <button title="ver anteriores" alt="ver anteriores" *ngIf="list.movieCards.length > 1" class="scroll-button left" (click)="scrollLeft(cardWrapper)">‹</button>
             <div class="cards-wrapper" #cardWrapper>
                     <div *ngFor="let movieCard of list.movieCards">
                         <app-movie-card class="card" [config]="movieCard"></app-movie-card>
                     </div>
                 </div>
-                <button *ngIf="list.movieCards.length > 1" class="scroll-button right" (click)="scrollRight(cardWrapper)">›</button>
+                <button title="ver proximas" alt="ver anteriores" *ngIf="list.movieCards.length > 1" class="scroll-button right" (click)="scrollRight(cardWrapper)">›</button>
             </div>
         </li>
     </ul>
