--- a/src/app/pages/list/list.component.html
+++ b/src/app/pages/list/list.component.html
@@ -2,27 +2,27 @@
     <ul class="name-list-container">
         <div class="input-container">
             <input [(ngModel)]="newListName" placeholder="Nombre de la lista nueva" />
-            <button class="delete-list" (click)="createList()">Crear</button>
+            <button title="Crear lista" alt="Crear llista" class="delete-list" (click)="createList()">Crear</button>
         </div>
         <li *ngFor="let list of userLists; let i = index">
             <div class="container-name">
                 <h2>{{ list.name }}</h2>
                 <div class="buttons-list">
-                    <button id="compartir" (click)="shareList(list.id)"><i class="bi bi-share-fill"></i></button>    
-                    <button id="delete" (click)="deleteList(list.name)"><i class="bi bi-trash3-fill"></i></button>        
+                    <button title="Compartir lista" alt="Compartir lista"  id="compartir" (click)="shareList(list.id)"><i class="bi bi-share-fill"></i></button>    
+                    <button title="Eliminar  lista" alt="Eliminar llista" id="delete" (click)="deleteList(list.name)"><i class="bi bi-trash3-fill"></i></button>        
                 </div>
              </div>
             <div class="movies-cards-container">
-                <button *ngIf="list.movies.length > 1" class="scroll-button left" (click)="scrollLeft(cardWrapper)">‹</button>
+                <button title="ver anteriores" alt="ver anteriores" *ngIf="list.movies.length > 1" class="scroll-button left" (click)="scrollLeft(cardWrapper)">‹</button>
                 <div class="cards-wrapper" #cardWrapper>
                     <div *ngFor="let movieCard of list.movieCards">
-                        <button (click)="deleteMovieOrSerie(movieCard.id, list.id)">
+                        <button title="Eliminar item de lista" alt="Eliminar item de llista"  (click)="deleteMovieOrSerie(movieCard.id, list.id)">
                             <i class="bi bi-trash3-fill"></i>
                           </button>
                         <app-movie-card class="card" [config]="movieCard"></app-movie-card>
                     </div>
                 </div>
-                <button *ngIf="list.movies.length > 1" class="scroll-button right" (click)="scrollRight(cardWrapper)">›</button>
+                <button title="ver siguientes" alt="ver siguientes" *ngIf="list.movies.length > 1" class="scroll-button right" (click)="scrollRight(cardWrapper)">›</button>
             </div>
         </li>
     </ul>
