--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -41,7 +41,7 @@
     .logo-section{
         width: 45px;
         height: 45px;
-        background-image: url('http://localhost:4200/assets/images/letra-m.png');
+        background-image: url('http://localhost:4200/assets/images/letra-m.png'); //debere cambiarlo
         background-size: cover;
         cursor: pointer;
     }
