--- a/src/themes/theme.scss
+++ b/src/themes/theme.scss
@@ -1,9 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Electrolize&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Raleway:wght@300;700&family=Exo+2:wght@400;700&family=Bungee+Inline&display=swap'); 
 $app-primary: #5aacef;
 $app-secondary: #C5C6C7;
 $input:#89d0dd;
