--- a/src/themes/theme.scss
+++ b/src/themes/theme.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Raleway:wght@300;700&family=Exo+2:wght@400;700&family=Bungee+Inline&display=swap'); 
+
 $app-primary: #5aacef;
 $app-secondary: #C5C6C7;
 $input:#89d0dd;
@@ -11,7 +12,7 @@ $font-title: 'Exo 2', sans-serif;
 $font-primary: 'Bebas Neue', sans-serif;
 $font-secundary: 'Raleway', sans-serif;
 $font-head:'Bungee Inline', sans-serif;
-$font-segement:'Fira Sans', sans-serif;
+$font-segement:'Bebas Neue', sans-serif;
 $fotn-console:'consolas';
 $text-blue: #00d8ff;
 $shadow-blue: 0px 8px 25px rgba(0, 216, 255, 0.6);
