--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -34,6 +34,8 @@
     
         </div>
     }
+    <app-download class="download" [imdbId]="imdbId">
+    </app-download>
     <app-providers [config]="config"></app-providers>  
     <app-comments [movieId]="movieId"></app-comments>
     </div>
